add required into field

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         </tr>
 
         <!-- Campo oculto com atributo required -->
-        <tr class="hidden">
+        <tr>
           <td>Campo Oculto</td>
-          <td><input type="text" name="campo_oculto" required /></td>
+          <td>
+            <input type="text" name="campo_oculto" required class="hidden" />
+          </td>
         </tr>
 
         <tr>
