retirando o campo hidden

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <h1>Form com campo hidden</h1>
+    <h1>Form</h1>
 
     <form action="#" method="get" name="simple-form">
       <table>
@@ -31,21 +31,6 @@
         <tr>
           <td>Large Field</td>
           <td><textarea cols="30" rows="10" name="large_field"></textarea></td>
-        </tr>
-
-        <!-- Campo oculto com atributo required -->
-        <tr>
-          <td>Campo Oculto</td>
-          <td>
-            <input type="text" name="campo_oculto" required class="hidden" />
-          </td>
-        </tr>
-
-        <tr>
-          <td colspan="2" align="right">
-            <br />
-            <input type="submit" id="submitButton" value="Enviar dados" />
-          </td>
         </tr>
       </table>
     </form>
