--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <h1>Form</h1>
 
-    <form action="#" method="get" name="simple-form">
+    <form action="#" method="get" name="novo-form">
       <table>
         <tr>
           <td>Nome</td>
