remove required fields in multistep

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <table>
           <tr>
             <td>Nome do Responsável</td>
-            <td><input type="text" name="responsavel" required /></td>
+            <td><input type="text" name="responsavel" /></td>
           </tr>
         </table>
         <button type="button" onclick="previousStep()">Anterior</button>
@@ -52,7 +52,7 @@
         <table>
           <tr>
             <td>Profissão</td>
-            <td><input type="text" name="profissao" required /></td>
+            <td><input type="text" name="profissao" /></td>
           </tr>
         </table>
         <button type="button" onclick="previousStep()">Anterior</button>
