teste com redirect

--- a/index.html
+++ b/index.html
@@ -3,94 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulario Integrado 2.0</title>
+    <title>Formulário com Redirecionamento</title>
     <style>
       body {
         padding: 50px;
+        font-family: Arial, sans-serif;
       }
-      .hidden {
-        display: none;
+      form {
+        max-width: 400px;
+        margin: 0 auto;
       }
-      .step {
-        margin-bottom: 20px;
+      label {
+        display: block;
+        margin-bottom: 8px;
+        font-weight: bold;
+      }
+      input[type="email"],
+      input[type="number"] {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 16px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+      button {
+        background-color: #007bff;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      button:hover {
+        background-color: #0056b3;
       }
     </style>
   </head>
   <body>
-    <h1>Form</h1>
+    <h1>Formulário com Redirecionamento</h1>
 
-    <form action="#" method="get" name="novo-form">
-      <!-- Step 1 -->
-      <div class="step" id="step1">
-        <table>
-          <tr>
-            <td>E-mail</td>
-            <td><input type="email" name="email" required /></td>
-          </tr>
-          <tr>
-            <td>Idade</td>
-            <td><input type="number" name="idade" required /></td>
-          </tr>
-        </table>
-        <button type="button" onclick="nextStep()">Próximo</button>
+    <form
+      action="#"
+      method="get"
+      name="novo-form"
+      onsubmit="handleSubmit(event)"
+    >
+      <div>
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required />
       </div>
 
-      <!-- Step 2 - Menor de idade -->
-      <div class="step hidden" id="step2-menor">
-        <table>
-          <tr>
-            <td>Nome do Responsável</td>
-            <td><input type="text" name="responsavel" /></td>
-          </tr>
-        </table>
-        <button type="button" onclick="previousStep()">Anterior</button>
-        <button type="submit">Enviar</button>
+      <div>
+        <label for="idade">Idade:</label>
+        <input type="number" id="idade" name="idade" required />
       </div>
 
-      <!-- Step 2 - Maior de idade -->
-      <div class="step hidden" id="step2-maior">
-        <table>
-          <tr>
-            <td>Profissão</td>
-            <td><input type="text" name="profissao" /></td>
-          </tr>
-        </table>
-        <button type="button" onclick="previousStep()">Anterior</button>
-        <button type="submit">Enviar</button>
-      </div>
+      <button type="submit">Enviar</button>
     </form>
 
     <script>
-      function nextStep() {
-        const idade = document.querySelector('input[name="idade"]').value;
-        const step1 = document.getElementById("step1");
-        const step2Menor = document.getElementById("step2-menor");
-        const step2Maior = document.getElementById("step2-maior");
-
-        step1.classList.add("hidden");
-
-        if (idade < 18) {
-          step2Menor.classList.remove("hidden");
-        } else {
-          step2Maior.classList.remove("hidden");
-        }
-      }
-
-      function previousStep() {
-        const step1 = document.getElementById("step1");
-        const step2Menor = document.getElementById("step2-menor");
-        const step2Maior = document.getElementById("step2-maior");
-
-        step2Menor.classList.add("hidden");
-        step2Maior.classList.add("hidden");
-        step1.classList.remove("hidden");
+      function handleSubmit(event) {
+        // Redireciona para uma URL específica após o envio
+        window.location.href = "https://www.exemplo.com/obrigado"; // Substitua pela URL desejada
       }
     </script>
-
-    <script
-      type="text/javascript"
-      async
-      src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/ef813e17-9cf9-4c14-8809-0c9fe8af936f-loader.js"
-    ></script>
   </body>
 </html>
