--- a/index.html
+++ b/index.html
@@ -67,5 +67,10 @@
         window.location.href = "https://www.exemplo.com/obrigado"; // Substitua pela URL desejada
       }
     </script>
+    <script
+      type="text/javascript"
+      async
+      src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/ef813e17-9cf9-4c14-8809-0c9fe8af936f-loader.js"
+    ></script>
   </body>
 </html>
