--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h1>Form com código de monitoramento em staging</h1>
+    <h1>Form</h1>
 
     <form action="#" method="get" name="novo-form">
       <!-- Step 1 -->
@@ -131,7 +131,7 @@
     <script
       type="text/javascript"
       async
-      src="https://d2umgtt5tsqx05.cloudfront.net/js/loader-scripts/37c417d5-3210-423a-87b4-a7a486315d5c-loader.js"
+      src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/ef813e17-9cf9-4c14-8809-0c9fe8af936f-loader.js"
     ></script>
   </body>
 </html>
