--- a/index.html
+++ b/index.html
@@ -133,5 +133,22 @@
       async
       src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/ef813e17-9cf9-4c14-8809-0c9fe8af936f-loader.js"
     ></script>
+
+    <script
+      type="text/javascript"
+      src="https://d335luupugsy2.cloudfront.net/js/integration/stable/rd-js-integration.min.js"
+    ></script>
+    <script type="text/javascript">
+      var meus_campos = {
+        email: "email",
+        cidade: "cidade",
+      };
+      options = { fieldMapping: meus_campos };
+      RdIntegration.integrate(
+        "19d831f0f59ac3f392fe28bc46e7d791",
+        "aaaaaa",
+        options
+      );
+    </script>
   </body>
 </html>
