--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <script
       type="text/javascript"
-      src="https://d335luupugsy2.cloudfront.net/js/integration/stable/rd-js-integration.min.js"
+      src="https://d335luupugsy2.cloudfront.net/js/integration/2.0.0/rd-js-integration.min.js"
     ></script>
     <script type="text/javascript">
       var meus_campos = {
