--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         cidade: "cidade",
       };
       options = { fieldMapping: meus_campos };
-      RdIntegration.integrate(
+      RdstationFormsIntegration.Integration.integrate(
         "19d831f0f59ac3f392fe28bc46e7d791",
         "aaaaaa",
         options
