--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1>Form</h1>
 
-    <form action="#" method="get" name="novo-form">
+    <form action="#" method="get" id="id_novo-form">
       <!-- Step 1 -->
       <div class="step" id="step1">
         <table>
@@ -134,21 +134,21 @@
       src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/ef813e17-9cf9-4c14-8809-0c9fe8af936f-loader.js"
     ></script>
 
-    <script
+    <!-- <script
       type="text/javascript"
       src="https://d335luupugsy2.cloudfront.net/js/integration/stable/rd-js-integration.min.js"
-    ></script>
+    ></script> -->
     <script type="text/javascript">
-      var meus_campos = {
-        email: "email",
-        cidade: "cidade",
-      };
-      options = { fieldMapping: meus_campos };
-      RdIntegration.integrate(
-        "19d831f0f59ac3f392fe28bc46e7d791",
-        "aaaaaa",
-        options
-      );
+      // var meus_campos = { co-mkt
+      //   email: "email",
+      //   cidade: "cidade",
+      // };
+      // options = { fieldMapping: meus_campos };
+      // RdIntegration.integrate(
+      //   "19d831f0f59ac3f392fe28bc46e7d791",
+      //   "aaaaaa",
+      //   options
+      // );
     </script>
   </body>
 </html>
