--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1>Form</h1>
 
-    <form action="#" method="get" id="id_novo-form">
+    <form action="#" method="get" id="id_novo_form">
       <!-- Step 1 -->
       <div class="step" id="step1">
         <table>
@@ -131,7 +131,7 @@
     <script
       type="text/javascript"
       async
-      src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/ef813e17-9cf9-4c14-8809-0c9fe8af936f-loader.js"
+      src="https://d2umgtt5tsqx05.cloudfront.net/js/loader-scripts/37c417d5-3210-423a-87b4-a7a486315d5c-loader.js"
     ></script>
 
     <!-- <script
