--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
       src="https://d2umgtt5tsqx05.cloudfront.net/js/loader-scripts/37c417d5-3210-423a-87b4-a7a486315d5c-loader.js"
     ></script>
 
-    <!-- <script
+    <script
       type="text/javascript"
-      src="https://d335luupugsy2.cloudfront.net/js/integration/stable/rd-js-integration.min.js"
-    ></script> -->
+      src="https://d335luupugsy2.cloudfront.net/js/integration/2.0.0/rd-js-integration.min.js"
+    ></script>
     <script type="text/javascript">
       // var meus_campos = { co-mkt
       //   email: "email",
