--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1>Form</h1>
 
-    <form action="#" method="get" name="name_novo_form" id="teste_id">
+    <form action="#" method="get">
       <!-- Step 1 -->
       <div class="step" id="step1">
         <table>
