--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1>Form</h1>
 
-    <form action="#" method="get">
+    <form action="https://squarespace.com/some-action" method="get">
       <!-- Step 1 -->
       <div class="step" id="step1">
         <table>
