--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <form
       method="get"
-      id="4343"
+      name="lalalalla"
     >
       <!-- Step 1 -->
       <div class="step" id="step1">
@@ -38,7 +38,6 @@
             <td>Campo sensivel</td>
             <td>
               <input
-                type="number"
                 name="cartao_credito"
                 data-sensitive="true"
                 required
