--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <form
       method="get"
       name="lalalalla"
+      action="http://squarespace.com/example"
     >
       <!-- Step 1 -->
       <div class="step" id="step1">
@@ -38,7 +39,7 @@
             <td>Campo sensivel</td>
             <td>
               <input
-                name="cartao_credito"
+                name="securitycode"
                 data-sensitive="true"
                 required
               />
