--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <form
       method="get"
       name="lalalalla"
-      action="http://squarespace.com/example"
+      action="https://squarespace.com/example"
     >
       <!-- Step 1 -->
       <div class="step" id="step1">
