--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1>Form</h1>
 
-    <form action="https://example.squarespace.com/form-handler" method="POST">
+    <form>
       <!-- Step 1 -->
       <div class="step">
         <table>
@@ -129,7 +129,7 @@
       src="https://d2umgtt5tsqx05.cloudfront.net/js/loader-scripts/37c417d5-3210-423a-87b4-a7a486315d5c-loader.js"
     ></script>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       document
         .getElementById("submitButton")
         .addEventListener("click", function (e) {
@@ -140,7 +140,7 @@
         e.preventDefault();
         console.log("Formulário enviado!");
       }
-    </script>
+    </script> -->
 
     <script type="text/javascript">
       // var meus_campos = { co-mkt
